# sequential_nrsfm

./: LICENSE  README.md
sequential/: CMakeLists.txt  build_ceres.sh  cameraparameters.cpp  cameraparameters.h  costframe.h  main.cpp  testSynthData.cpp
sequential/include/: camera.h  cameraparameters.h  costframe.h  shapemodel.h  synthdata.h
sequential/sba-1.6/demo/: CMakeLists.txt
sequential/src/: costframe.cpp
sequential/test/: testSynthData.cpp
